src/components/UserDashboard/DashboardDetails/DashboardDetails.css
.dashboardDetails {
  padding-left: 5%;
  padding-right: 5%;
}
.monthExpenses {
  background-color: #eaf9f6;
  position: relative;
  text-align: center;
  padding: 15px 10px;
  border-radius: 10px;
  font-size: 30px;
  box-shadow: 0px 0px 10px #00000010;
  color: #003321;
  display: flex;
  align-items: center;
  justify-content: center;
}
.monthExpenses > span:nth-child(2) {
  display: inline-block; /* Ensures the element takes only as much width as needed */
  max-width: 500px; /* Set the maximum width based on your requirement */
  white-space: nowrap; /* Prevents text from wrapping to the next line */
  overflow: hidden; /* Hides the overflow text */
  text-overflow: ellipsis; /* Adds the three dots at the end */
}
.monthExpenses:hover {
  scale: 1.05;
}
.overview {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.transactionActions {
  background-color: #eaf9f6;
  text-align: center;
  border-radius: 10px;
  display: flex;
  width: 500px;
}
.transactionActions > div:hover {
  border-radius: 10px;
  background-color: #dff7f2;
  cursor: pointer;
  img {
    scale: 1.1;
  }
  span {
    font-size: 18px;
  }
}
.transactionActions > div:nth-child(2):hover {
  background-color: rgba(242, 69, 54, 0.1);
}
.transactionActions > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 25px 5px;
  flex: 1;
  height: 100px;
}

.transactionActions span {
  font-size: 17px;
}

.transactionActions img {
  height: 60px;
  width: 60px;
  margin-bottom: 1vh;
}

.customLeftBorder {
  position: relative;
}
.customLeftBorder::before {
  content: "";
  position: absolute;
  left: 0; /* Align to the left side */
  top: 20%; /* Gap from the top */
  bottom: 20%; /* Gap from the bottom */
  width: 2px; /* Border width */
  background-color: #003321; /* Border color */
  border-radius: 3px;
}
.wallet {
  background-color: #eaf9f6;
  border-radius: 10px;
  font-size: 23px;
  min-height: 100px;
  max-height: fit-content;
  max-width: 500px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.wallet:hover {
  scale: 1.05;
}
.wallet p {
  margin: 0;
  font-size: 30px;
  padding: 15px 25px;
  color: #003321;
}
.wallet span {
  margin: 0;
  font-size: 30px;
  padding: 15px 25px;
  color: #003321;
  display: inline-block; /* Ensures the element takes only as much width as needed */
  max-width: 450px; /* Set the maximum width based on your requirement */
  white-space: nowrap; /* Prevents text from wrapping to the next line */
  overflow: hidden; /* Hides the overflow text */
  text-overflow: ellipsis; /* Adds the three dots at the end */
}

.breakdown {
  margin-top: 10px;
}

.breakdown span {
  font-size: 26px;
  color: #003321;
}
.breakdown label {
  font-size: 15px;
  color: #003321;
}

.expandIcon {
  height: 18px;
  width: 18px;
  margin-right: 10px;
}
.cards {
  cursor: pointer;
  background-color: #eaf9f6;
  border-radius: 10px;
  margin-bottom: 10px;
  border: 1px solid #019863;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 10px;
  min-height: 90px;
}
.cards:hover {
  background-color: #dff7f2;
  scale: 1.05;
}
.cards > div {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
}
.cards label {
  font-size: 30px;
  color: #003321;
  padding-left: 8px;
}

.cards span {
  color: #003321;
  font-size: 25px;
}

.categoryCards {
  display: grid;
  grid-template-columns: repeat(3, 1fr); /* Creates 3 equal columns */
  gap: 30px 90px; /* Adjust the gap between cards as needed */
}
.displayUsername {
  display: none;
}
.pieChartContainer {
  position: relative;
  background-color: #eaf9f6;
  border: 1px solid #019863;
  border-radius: 10px;
  height: 600px;
  justify-content: center;
}
.pieChartContainerEmpty {
  position: relative;
  background-color: #eaf9f6;
  border: 1px solid #019863;
  border-radius: 10px;
  justify-content: center;
}
.pieChartContainerEmpty > p {
  font-size: 20px;
  color: #003321;
  text-align: center;
}
.pieChartContainer > span {
  position: absolute;
  font-size: 25px;
  color: #003321;
  top: 10px;
  left: 20px;
}
.webView2 {
  display: flex;
}
.mobileView2 {
  display: none;
}
.debitTransactiontext {
  color: #a21c0f;
}
.editIcon {
  position: absolute;
  bottom: 0;
  right: 0;
  cursor: pointer;
}
/* Phone Screen CSS */
@media (max-width: 760px) {
  .webView2 {
    display: none;
  }
  .mobileView2 {
    display: block;
  }
  .pieChartContainer {
    height: fit-content;
    padding: 0;
  }
  .pieChartContainer > span {
    font-size: 13px;
  }
  .monthExpenses {
    font-size: 16px;
  }
  .monthExpenses {
    flex-direction: column;
  }
  .monthExpenses > span:nth-child(2) {
    max-width: 240px;
  }
  .displayUsername {
    display: block;
    color: #003321;
    font-size: 30px;
    margin-bottom: 12px;
  }
  .overview {
    flex-direction: column-reverse;
  }
  .transactionActions {
    width: -webkit-fill-available;
  }
  .transactionActions span {
    font-size: 14px;
  }
  .transactionActions img {
    height: 30px;
    width: 30px;
    margin-bottom: 1vh;
  }
  .transactionActions > div {
    padding: 3px 0px;
  }
  .customLeftBorder::before {
    width: 1.5px; /* Border width */
  }
  .wallet {
    font-size: 28px;
    margin-bottom: 25px;
    width: -webkit-fill-available;
  }
  .wallet p {
    font-size: 20px;
    padding: 10px 25px;
  }
  .wallet p:nth-child(2) {
    font-size: 35px;
  }
  .breakdown {
    margin-top: unset;
  }
  .breakdown > span {
    font-size: 22px;
  }
  .breakdown > label {
    font-size: 14px;
  }
  .categoryCards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: unset;
  }
  .cards span {
    font-size: 12px;
  }
  .cards label {
    font-size: 20px;
    padding-left: 8px;
    margin-top: 12px;
  }
  .cards {
    min-width: unset;
    min-height: unset;
    width: 130px;
    padding: 6px;
    margin-bottom: 20px;
  }
  .expandIcon {
    height: 10px;
    width: 10px;
    margin-right: 4px;
  }
}

@keyframes initialAppear {
  from {
    opacity: 0;
    scale: 0.7;
    transform: translateY(100px);
  }
  to {
    opacity: 1;
    scale: 1;
    transform: translateY(0px);
  }
}
.dashboardDetails div {
  animation: initialAppear 0.5s ease-in-out;
}

